--- a/app/src/main/res/layout/fragment_addstudent.xml
+++ b/app/src/main/res/layout/fragment_addstudent.xml
@@ -6,41 +6,53 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash"
-    android:paddingLeft="@dimen/fragment_horizontal_margin"
-    android:paddingTop="@dimen/fragment_vertical_margin"
-    android:paddingRight="@dimen/fragment_horizontal_margin"
-    android:paddingBottom="@dimen/fragment_vertical_margin"
     tools:context=".fragments.admin.AddStudentFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="450dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         app:cardBackgroundColor="#010523"
         app:cardCornerRadius="10dp"
+        android:padding="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.64">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/action_student_add"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/rounded_corners"
+                android:text="ADD STUDENT"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.87" />
+
             <TextView
                 android:id="@+id/idTView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="28dp"
+                android:layout_marginBottom="24dp"
                 android:text="ID"
                 android:textColor="#FFFFFF"
                 android:textSize="19sp"
-                app:layout_constraintBottom_toTopOf="@id/addStudentName"
+                app:layout_constraintBottom_toTopOf="@+id/NameView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.04"
+                app:layout_constraintHorizontal_bias="0.045"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
@@ -49,61 +61,60 @@
                 android:id="@+id/addStudentId"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_marginEnd="92dp"
+                android:layout_marginStart="99dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
                 android:hint=" Enter Student ID"
-                android:textColorHint="@android:color/secondary_text_dark"
                 android:inputType="none"
                 android:paddingLeft="5dp"
                 android:textColor="#FFFFFF"
+                android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/idTView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.038" />
+                app:layout_constraintVertical_bias="0.069" />
 
             <TextView
                 android:id="@+id/NameView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="14dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="18dp"
                 android:text=" Name"
                 android:textColor="#FFFFFF"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentName"
-                app:layout_constraintEnd_toStartOf="@+id/passwrd"
-                app:layout_constraintHorizontal_bias="0.12"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.045"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/id"
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/brancView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="88dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginBottom="22dp"
                 android:text="Branch"
                 android:textColor="#FFFFFF"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentBranch"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.614"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
-                app:layout_constraintVertical_bias="0.931" />
+                app:layout_constraintHorizontal_bias="0.045"
+                app:layout_constraintStart_toEndOf="@+id/Percen"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
 
             <EditText
                 android:id="@+id/addStudentName"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginTop="68dp"
+                android:layout_marginBottom="67dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
@@ -113,8 +124,8 @@
                 android:textColor="#FFFFFF"
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentPercentage"
-                app:layout_constraintEnd_toStartOf="@+id/password"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.064"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
 
@@ -122,8 +133,10 @@
                 android:id="@+id/password"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="60dp"
-                android:layout_marginBottom="64dp"
+                android:layout_marginStart="43dp"
+                android:layout_marginTop="68dp"
+                android:layout_marginEnd="48dp"
+                android:layout_marginBottom="67dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
@@ -134,50 +147,48 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentBranch"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.844"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/idTView"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/addStudentName"
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
 
             <TextView
                 android:id="@+id/Percen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="18dp"
+                android:layout_marginTop="19dp"
+                android:layout_marginBottom="22dp"
                 android:text="Percentage"
                 android:textColor="#FFFFFF"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/addStudentPercentage"
-                app:layout_constraintEnd_toStartOf="@+id/passwrd"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.057"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentName" />
+                app:layout_constraintTop_toBottomOf="@+id/addStudentName"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/passwrd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="132dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginBottom="18dp"
                 android:text="Password"
                 android:textColor="#FFFFFF"
                 android:textSize="19sp"
                 app:layout_constraintBottom_toTopOf="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.669"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentBranch"
-                app:layout_constraintVertical_bias="0.978" />
+                app:layout_constraintHorizontal_bias="0.045"
+                app:layout_constraintStart_toEndOf="@+id/NameView"
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
 
             <EditText
                 android:id="@+id/addStudentPercentage"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="150dp"
-                android:layout_marginBottom="38dp"
+                android:layout_marginTop="165dp"
+                android:layout_marginBottom="25dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
@@ -187,17 +198,18 @@
                 android:textColor="#FFFFFF"
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/action_student_reset"
-                app:layout_constraintEnd_toStartOf="@+id/password"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.06"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/idTView" />
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
 
             <EditText
                 android:id="@+id/addStudentBranch"
                 android:layout_width="142dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="150dp"
-                android:layout_marginBottom="38dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginTop="165dp"
+                android:layout_marginBottom="25dp"
                 android:background="@drawable/rounded_corners"
                 android:backgroundTint="#2B2468"
                 android:ems="10"
@@ -207,10 +219,9 @@
                 android:textColorHint="@android:color/secondary_text_dark"
                 app:layout_constraintBottom_toTopOf="@+id/action_student_reset"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.848"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addStudentId"
-                app:layout_constraintVertical_bias="0.409" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/addStudentPercentage"
+                app:layout_constraintTop_toBottomOf="@+id/addStudentId" />
 
             <Button
                 android:id="@+id/action_student_reset"
@@ -218,46 +229,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_marginBottom="27dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/rounded_corners"
                 android:text="RESET"
                 app:layout_constraintBottom_toTopOf="@+id/action_student_add"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
-
-            <Button
-                android:id="@+id/action_student_add"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/rounded_corners"
-                android:text="ADD STUDENT"
-                app:layout_constraintBottom_toTopOf="@+id/changePassword"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <TextView
-                android:id="@+id/changePassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Change Password"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:textColor="#0865F1"
-                android:textSize="20sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.962" />
 
             <ProgressBar
                 android:id="@+id/loadingBar"
@@ -266,10 +245,8 @@
                 android:layout_height="78dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.501"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.559" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -277,13 +254,15 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="239dp"
-        android:layout_height="143dp"
+        android:layout_width="270dp"
+        android:layout_height="175dp"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.794"
         app:srcCompat="@drawable/appwithoutbackground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
