--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -48,6 +48,11 @@
             android:title="Add Notifications" />
 
         <item
+            android:id="@+id/tpo_viewCompany"
+            android:icon="@drawable/notify"
+            android:title="View Company" />
+
+        <item
             android:id="@+id/tpo_addPapers"
             android:icon="@drawable/addpa"
             android:title="Add Previous Papers" />
