--- a/app/src/main/res/layout/slide_item_container.xml
+++ b/app/src/main/res/layout/slide_item_container.xml
@@ -2,6 +2,7 @@
 <com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scaleType="fitXY"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/imageSlide"
     app:riv_corner_radius="8dp"
